--- a/bitsdojo_window_windows/pubspec.yaml
+++ b/bitsdojo_window_windows/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   bitsdojo_window_platform_interface:
-    path: ../bitsdojo_window_platform_interface
+    git:
+      url: https://github.com/BakaLabs/bitsdojo_window
+      path: bitsdojo_window_platform_interface
+      ref: master
   win32: ">=5.0.5"
   ffi: ^2.0.0
 
